# app_posts_and_comments

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
posts/: admin.py  apps.py  models.py  serializers.py  urls.py  validators.py  views.py
posts/migrations/: 0001_initial.py
users/: admin.py  managers.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py
